* Added sticky className to thead which are used to set th elements in sticky position (does not work on mobile/pads as .swiper has overflow: hidden which prevents sticky from working) * Fixed double (s2) markings in mock file

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/hops.scss
@@ -12,7 +12,6 @@
 
 .hops-container {
   flex-basis: 100%;
-  overflow: auto;
   padding: 10px;
   width: 100%;
 
